--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET=anything-secret-and-should-be-hard-to-guess
-DB_HOST=127.0.0.1
-DB_USER=postgres
-DB_PASSWORD=root
-DB_NAME=rielzdb
-DB_PORT=5432 # default port number
+DB_HOST=arjuna
+DB_USER=hdrgggyf
+DB_PASSWORD=h1KsDh5zUqGwucWAOg3d4V8SMoyZRrvH
+DB_NAME=hdrgggyf
+DB_PORT=5433 # default port number
