--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET=anything-secret-and-should-be-hard-to-guess
-DB_HOST=arjuna
+DB_HOST=arjuna.db.elephantsql.com
 DB_USER=hdrgggyf
 DB_PASSWORD=h1KsDh5zUqGwucWAOg3d4V8SMoyZRrvH
 DB_NAME=hdrgggyf
